--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
     <title>Login with mongodb flask</title>
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -13,17 +12,22 @@
 <div class="container">
     <div class="header">
         <nav>
+            {% if error  %}
+                <p style="color: red;">You need to login</li>
+            {% endif %}
+            {% if username %}
+                <p role="presentation"> Logged in as {{ username }}</li>
+            {% endif %}
             <ul class="nav nav-pills pull-right">
-                {%if username is defined %}
-                <li role="presentation"> Logged in as {{username}}</li>
-                {% else %}
-                <li role="presentation" class="active"><a href="#">Home</a>
+                <li role="presentation" class="active">
+                    <a href="#">Home</a>
                 </li>
-                <li role="presentation"><a href="/auth">Sign In</a>
+                <li role="presentation">
+                    <a href="/auth">Sign In</a>
                 </li>
-                <li role="presentation"><a href="/signup">Sign Up</a>
+                <li role="presentation">
+                    <a href="/signup">Sign Up</a>
                 </li>
-                {% endif %}
             </ul>
         </nav>
         <h3 class="text-muted">Login with mongodb flask</h3>
