--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
-        <li role="presentation" ><a href="/index">Home</a></li>
+        <li role="presentation" ><a href="/main">Home</a></li>
         <li role="presentation"><a href="/auth">Sign In</a></li>
         <li role="presentation" class="active"><a href="#">Sign Up</a></li>
       </ul>
